sk1/namespace.yaml
apiVersion: "v1"
kind: Namespace
metadata:
  name: skuska
  labels:
    name: development
