sk1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - protocol: TCP
      # Port služby
      port: 3306
      # Port kontajnera
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
spec:
  selector:
    app: adminer
  # Typ služby sa mení z ClusterIP na NodePort
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      # Port viditeľný na každom uzle
      nodePort: 30881
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: web-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: apache
